@@ -12,19 +12,27 @@ repositories {
 }
 test {
     useJUnitPlatform()
+    jvmArgs '--enable-preview'
+    //maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
     /*useTestNG() {
             includeGroups 'smoke', 'sanity'
            excludeGroups 'regression'
         }*/
 }
 
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    /*testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
-    testCompileOnly 'junit:junit:4.13'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'*/
+    testImplementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
     testCompile("io.github.bonigarcia:webdrivermanager:4.0.0")
     testCompile 'com.codeborne:selenide:5.12.2'
-    compile group: 'org.testng', name: 'testng', version: '6.14.3'
+    testCompile 'io.cucumber:cucumber-java:6.1.0'
+    testCompile 'io.cucumber:cucumber-junit:6.1.0'
+    //testCompile 'info.cukes:cucumber-core:1.1.5'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 }
+
